// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`App > should load the AppConfig page and allow for installation 1`] = `
{
  "parameters": {
    "projectId": "project-id-123",
  },
  "targetState": {
    "EditorInterface": {},
  },
}
`;

exports[`App > should render the sidebar app with signing and request button 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="css-dt2tyy signin"
        data-test-id="open-dialog"
        type="button"
      >
        <span
          class="css-40g50j"
        >
          Sign in with Smartling
        </span>
      </button>
      <br />
      <button
        class="css-1ka7c9s request-translation"
        data-test-id="request-translation"
        type="button"
      >
        <span
          class="css-40g50j"
        >
          <svg
            aria-hidden="true"
            class="css-1jrff5x"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
           Request Translation
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="css-dt2tyy signin"
      data-test-id="open-dialog"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        Sign in with Smartling
      </span>
    </button>
    <br />
    <button
      class="css-1ka7c9s request-translation"
      data-test-id="request-translation"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        <svg
          aria-hidden="true"
          class="css-1jrff5x"
          data-test-id="cf-ui-icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Request Translation
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App > should show an error message when getting a general error from Smartling 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="smartling-status"
      >
        <div>
          <p
            class="info-p css-ki4iwd"
            data-test-id="cf-ui-paragraph"
          >
            Smartling status
          </p>
        </div>
        <div>
          <div
            class="job-status css-1jskwfg"
            data-test-id="cf-ui-badge"
          >
            <span
              class="css-1f8vwjn"
              data-test-id="cf-ui-caption"
            >
              Disconnected
            </span>
          </div>
        </div>
      </div>
      <button
        class="css-1ka7c9s request-translation"
        data-test-id="request-translation"
        type="button"
      >
        <span
          class="css-40g50j"
        >
          <svg
            aria-hidden="true"
            class="css-1jrff5x"
            data-test-id="cf-ui-icon"
            role="img"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </svg>
           Request Translation
        </span>
      </button>
      <article
        class="general-error css-ep96ao"
        data-test-id="cf-ui-note"
      >
        <svg
          aria-hidden="true"
          class="css-77587x"
          data-test-id="cf-ui-icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
          />
        </svg>
        <div
          class="css-j7qwjs"
        >
          <h2
            class="css-1fgrah0"
            data-test-id="cf-ui-heading"
          >
            Connection error
          </h2>
          <div
            class="css-n69953"
          >
            Please ensure that you have access to the connected Smartling project.
            <br />
            <a
              class="css-1wm2dh8"
              data-test-id="cf-ui-text-link"
              href="https://contentful.com/developers/docs/extensibility/apps/smartling/"
              rel="noopener noreferrer"
              target="_blank"
            >
              <span
                class="css-x1sij0"
              >
                <span>
                  View documentation
                </span>
              </span>
            </a>
          </div>
        </div>
      </article>
      <p
        class="smartling-more-info css-ki4iwd"
        data-test-id="cf-ui-paragraph"
      >
        <a
          class="css-1wm2dh8"
          data-test-id="cf-ui-text-link"
          href="https://help.smartling.com/hc/en-us/articles/360000546974-Contentful-Connector-Overview"
          rel="noopener"
          target="_blank"
        >
          <span
            class="css-x1sij0"
          >
            <span>
              Learn how Smartling works with Contentful 
              <svg
                aria-hidden="true"
                class="css-1q4rrbp"
                data-test-id="cf-ui-icon"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </svg>
            </span>
          </span>
        </a>
      </p>
    </div>
  </body>,
  "container": <div>
    <div
      class="smartling-status"
    >
      <div>
        <p
          class="info-p css-ki4iwd"
          data-test-id="cf-ui-paragraph"
        >
          Smartling status
        </p>
      </div>
      <div>
        <div
          class="job-status css-1jskwfg"
          data-test-id="cf-ui-badge"
        >
          <span
            class="css-1f8vwjn"
            data-test-id="cf-ui-caption"
          >
            Disconnected
          </span>
        </div>
      </div>
    </div>
    <button
      class="css-1ka7c9s request-translation"
      data-test-id="request-translation"
      type="button"
    >
      <span
        class="css-40g50j"
      >
        <svg
          aria-hidden="true"
          class="css-1jrff5x"
          data-test-id="cf-ui-icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
         Request Translation
      </span>
    </button>
    <article
      class="general-error css-ep96ao"
      data-test-id="cf-ui-note"
    >
      <svg
        aria-hidden="true"
        class="css-77587x"
        data-test-id="cf-ui-icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <div
        class="css-j7qwjs"
      >
        <h2
          class="css-1fgrah0"
          data-test-id="cf-ui-heading"
        >
          Connection error
        </h2>
        <div
          class="css-n69953"
        >
          Please ensure that you have access to the connected Smartling project.
          <br />
          <a
            class="css-1wm2dh8"
            data-test-id="cf-ui-text-link"
            href="https://contentful.com/developers/docs/extensibility/apps/smartling/"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span
              class="css-x1sij0"
            >
              <span>
                View documentation
              </span>
            </span>
          </a>
        </div>
      </div>
    </article>
    <p
      class="smartling-more-info css-ki4iwd"
      data-test-id="cf-ui-paragraph"
    >
      <a
        class="css-1wm2dh8"
        data-test-id="cf-ui-text-link"
        href="https://help.smartling.com/hc/en-us/articles/360000546974-Contentful-Connector-Overview"
        rel="noopener"
        target="_blank"
      >
        <span
          class="css-x1sij0"
        >
          <span>
            Learn how Smartling works with Contentful 
            <svg
              aria-hidden="true"
              class="css-1q4rrbp"
              data-test-id="cf-ui-icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 19H5V5h7V3H5a2 2 0 00-2 2v14a2 2 0 002 2h14c1.1 0 2-.9 2-2v-7h-2v7zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3h-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </span>
      </a>
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
